<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rock Lizard Spock</string>
    <string name="app_id">275527979298725</string>
    <string name="hello_world">Hello world!</string>
    <string name="one_player">Play One Player</string>
    <string name="choose_your_weapon">Choose Your Weapon</string>
    <string name="fight">Fight!</string>
    <string name="you_win">You Win!</string>
    <string name="win_rule">Spock smashes Scissors</string>
    <string name="again">Again!</string>
    <string name="home">Home</string>
    <string name="rules">Rules</string>
    <string name="about">About</string>
    <string name="rules_of_rpsls">The Rules of \nRock-Paper-Scissors-Lizard-Spock</string>
    <string name="rule_list">SCISSORS cut PAPER\nPAPER covers ROCK\nROCK crushes LIZARD\nLIZARD poisons SPOCK\nSPOCK smashes SCISSORS\nSCISSORS decapitate LIZARD\nLIZARD eats PAPER\nPAPER disproves SPOCK\nSPOCK vaporizes ROCK\nROCK crushes SCISSORS</string>
    <string name="title_activity_rules">RulesActivity</string>
    <string name="title_activity_two_ppass">TwoPPassActivity</string>
    <string name="choose_your_weaponP">Player 1, Choose Your Weapon</string>
    <string name="choose">Choose</string>
    <string name="passed">Ready</string>
    <string name="choose_your_weaponP2">Player 2, Choose Your Weapon</string>
    <string name="title_activity_two_pwin">TwoPWinActivity</string>
    <string name="two_player">Play Two Player</string>
    <string name="title_activity_two_pwifi">TwoPWifiActivity</string>
    <string name="title_activity_two_pbluetooth">TwoPBluetoothActivity</string>
    <string name="scissors">SCISSORS</string>
    <string name="cut">cut</string>
    <string name="paper">PAPER</string>
    <string name="covers">covers</string>
    <string name="rock">ROCK</string>
    <string name="crushes">crushes</string>
    <string name="lizard">LIZARD</string>
    <string name="poisons">poisons</string>
    <string name="spock">SPOCK</string>
    <string name="smashes">smashes</string>
    <string name="decapitate">decapitate</string>
    <string name="eats">eats</string>
    <string name="disproves">disproves</string>
    <string name="vaporizes">vaporizes</string>
    <string name="title_activity_fblogin">FBLoginActivity</string>
    <string name="share">Tell Facebook friends</string>
    <string name="login">Log in to Facebook</string>

</resources>