<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvTOutcome"
        style="@style/WinText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/you_win" />

    <TextView
        android:id="@+id/tvTWinRule"
        style="@style/LightText.Instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/win_rule" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="300dp" >

        <ImageView
            android:id="@+id/ivTWinGray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:src="@drawable/choose_gray" />

        <ImageView
            android:id="@+id/ivTWinImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:src="@drawable/win_spock_scissors"
            android:tag="SPOCK_SCISSORS"
            android:visibility="invisible" />
    </FrameLayout>

    <Button
        android:id="@+id/btnTAgain"
        style="@style/FightButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onAgain"
        android:text="@string/again" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnTShare"
            style="@style/FightButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:onClick="onShare"
            android:text="@string/share" />

        <ProgressBar
            android:id="@+id/pbTShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/btnTShare"
            android:visibility="invisible" >
        </ProgressBar>
    </RelativeLayout>

</LinearLayout>