<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvPChoose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/choose_your_weaponP" />

    <FrameLayout
        android:id="@+id/flPPlayspace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/ivPHotspots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:src="@drawable/hotspots"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/ivPChooseGray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:src="@drawable/choose_gray" />

        <ImageView
            android:id="@+id/ivPArrows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:src="@drawable/choose_gray"
            android:visibility="invisible" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/flPButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnPFight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:onClick="onFight"
            android:text="@string/fight"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btnPPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:onClick="onPass"
            android:text="@string/passed"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btnPChoose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:onClick="onChoose"
            android:text="@string/choose"
            android:visibility="invisible" />
    </FrameLayout>

</LinearLayout>