<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00ffff33"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvOutcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/you_win"
        android:textStyle="bold" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00ffff33" >

        <ImageView
            android:id="@+id/ivWinGray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:onClick="onChoose"
            android:src="@drawable/choose_gray" />

        <ImageView
            android:id="@+id/ivSPOCKSCISSORS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:src="@drawable/win_spock_scissors"
            android:tag="SPOCK_SCISSORS"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/ivSPOCKROCK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:src="@drawable/win_spock_rock"
            android:tag="SPOCK_ROCK"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/ivSPOCKLIZARD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:src="@drawable/lose_spock_lizard"
            android:tag="SPOCK_LIZARD"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/ivSPOCKPAPER"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:src="@drawable/lose_spock_paper"
            android:tag="SPOCK_PAPER"
            android:visibility="invisible" />
    </FrameLayout>

    <TextView
        android:id="@+id/tvWinRule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/win_rule" />

    <Button
        android:id="@+id/btnAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onAgain"
        android:text="@string/again" />

</LinearLayout>